
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int time_t ;
typedef int X509_NAME ;
typedef int X509 ;
typedef int RSA ;
typedef int FILE ;
typedef int EVP_PKEY ;
typedef int ASN1_TIME ;
typedef int ASN1_INTEGER ;


 int ASN1_INTEGER_free (int *) ;
 int * ASN1_INTEGER_new () ;
 int ASN1_INTEGER_set (int *,int) ;
 int ASN1_TIME_free (int *) ;
 int * ASN1_TIME_new () ;
 int ASN1_TIME_set (int *,int) ;
 int EVP_PKEY_assign_RSA (int *,int *) ;
 int * EVP_PKEY_new () ;
 int EVP_md5 () ;
 int RSA_F4 ;
 int * RSA_generate_key (int,int ,int *,int *) ;
 int X509_NAME_free (int *) ;
 int * X509_new () ;
 int X509_set_notAfter (int *,int *) ;
 int X509_set_notBefore (int *,int *) ;
 int X509_set_pubkey (int *,int *) ;
 int X509_set_serialNumber (int *,int *) ;
 int X509_set_version (int *,int) ;
 int X509_sign (int *,int *,int ) ;
 int close (int *) ;
 int set_subject (int *,int *,int *) ;
 int step (char*,int ) ;

X509 *Create_Death_Certificate(EVP_PKEY **key)
{
 FILE *fd;
 time_t t;

 X509_NAME *subject=((void*)0);
 X509_NAME *issuer=((void*)0);
 ASN1_TIME *tbefore,*tafter;
 ASN1_INTEGER *serial;
 X509 *dz;
 RSA *rsa;
 EVP_PKEY *pk;

 step("preparing dirty certificate",0);

   dz = X509_new();


   pk = EVP_PKEY_new();
   rsa = RSA_generate_key(1024, RSA_F4, ((void*)0),((void*)0));
   EVP_PKEY_assign_RSA(pk,rsa);
 X509_set_pubkey(dz,pk);


   X509_set_version(dz,0x2);
 serial = ASN1_INTEGER_new();
   ASN1_INTEGER_set(serial,0x01);
 X509_set_serialNumber(dz, serial);


 tbefore = ASN1_TIME_new();
 tafter = ASN1_TIME_new();
 ASN1_TIME_set(tbefore,t=0);
 ASN1_TIME_set(tafter,t=60*60*24*366*65);
   X509_set_notBefore(dz, tbefore);
   X509_set_notAfter(dz, tafter);


 set_subject(dz,subject,issuer);


 X509_sign(dz, pk, EVP_md5());

 *key=pk;
 X509_NAME_free(subject);
 ASN1_INTEGER_free(serial);
 ASN1_TIME_free(tbefore);
 ASN1_TIME_free(tafter);
 close(fd);
 return dz;
}
